# ai-docs-rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml
deliverables/evidence/final_acceptance/: README.md
scripts/: ask_agent.py  ask_docs.py  index_url.py  pinecone_smoke_test.py  pypi_lookup.py  run_telegram_bot.py  search_query.py  smoke_test.py  url_preview.py  user_memory.py
src/ai_docs_agent/: __init__.py  agent.py  config.py  indexing.py  integrated_agent.py  langchain_agent.py  memory.py  models.py  observability.py  pinecone_store.py  pypi.py  retrieval.py  telegram_bot.py  tools.py  url_ingestion.py  user_memory.py
tests/: test_agent.py  test_ask_agent_script.py  test_ask_docs_script.py  test_config.py  test_index_url_script.py  test_indexing.py  test_integrated_agent.py  test_langchain_agent.py  test_memory.py  test_models.py  test_package.py  test_pinecone_smoke_script.py  test_pinecone_store.py  test_pypi.py  test_pypi_lookup_script.py  test_retrieval.py  test_run_telegram_bot_script.py  test_search_query_script.py  test_telegram_bot.py  test_url_ingestion.py  test_url_preview_script.py  test_user_memory.py  test_user_memory_script.py
