[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-docs-rag-agent"
version = "0.1.0"
description = "Telegram RAG agent for technical documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pinecone>=9,<10",
    "langchain-openai>=1,<2",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "python-dotenv>=1,<2",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "langchain-text-splitters>=1,<2",
    "python-telegram-bot>=22,<23",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_docs_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --strict-markers --strict-config"

[tool.ruff]
line-length = 100
target-version = "py311"
include = ["src/**/*.py", "tests/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
